[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "openai>=2.14.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "streamlit>=1.52.2",
]
